--- a/web_dev/blog/templates/forms.html
+++ b/web_dev/blog/templates/forms.html
@@ -1,5 +1,5 @@
 
-<form method='POST' path='./'>
+<form method='POST' action='.' enctype='multipart/form-data'>
 	{% csrf_token %}
     {% for field in form %}
     <div class="form-group">
